paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/struct_and_union_2/sample_004/target.compile.log
error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/struct_and_union_2/sample_004/target.rs:19:12
   |
19 |     f(&mut S.i);
   |            ^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/struct_and_union_2/sample_004/target.rs:20:9
   |
20 |     f4(&S.ci);
   |         ^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/struct_and_union_2/sample_004/target.rs:25:13
   |
25 |     f2(&mut VS.i);
   |             ^^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/struct_and_union_2/sample_004/target.rs:26:8
   |
26 |     g(&VS.ci);
   |        ^^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/struct_and_union_2/sample_004/target.rs:28:8
   |
28 |     if S.i != 1 {
   |        ^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/struct_and_union_2/sample_004/target.rs:31:8
   |
31 |     if S.ci != 2 {
   |        ^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/struct_and_union_2/sample_004/target.rs:40:8
   |
40 |     if VS.i != 5 {
   |        ^^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/struct_and_union_2/sample_004/target.rs:43:8
   |
43 |     if VS.ci != 6 {
   |        ^^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/struct_and_union_2/sample_004/target.rs:47:5
   |
47 |     S.i = 10;
   |     ^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/struct_and_union_2/sample_004/target.rs:48:8
   |
48 |     if S.i != 10 {
   |        ^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/struct_and_union_2/sample_004/target.rs:52:5
   |
52 |     VS.i = 20;
   |     ^^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/struct_and_union_2/sample_004/target.rs:53:8
   |
53 |     if VS.i != 20 {
   |        ^^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error: aborting due to 12 previous errors

For more information about this error, try `rustc --explain E0133`.